--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    background-image:url("imgs/me.png");
+    background-repeat: no-repeat, repeat;
   }
   
   /* Header styling */
